@@ -1,51 +1,4 @@
-#if defined(GEN_MASM)
-.CODE
-#  define BEGIN_ASM
-#  define END_ASM END
-#  define GLOBAL(X) X PROC
-#  define BEGIN_PROC(X) 	OPTION PROLOGUE:NONE, EPILOGUE:NONE
-#  define END_PROC(X)   X ENDP
-#else
-	.intel_syntax
-	.text
-#  define BEGIN_ASM
-#  define END_ASM
-#  if defined (__APPLE__)
-#    define CSYM(X) _##X
-#  else
-#    define CSYM(X) X
-#  endif
-#  define RAX %rax
-#  define RBX %rbx
-#  define RCX %rcx
-#  define RDX %rdx
-#  define RSI %rsi
-#  define RDI %rdi
-#  define RBP %rbp
-#  define RSP %rsp
-#  define R8   %r8
-#  define R9   %r9
-#  define R10  %r10
-#  define R11  %r11
-#  define R12  %r12
-#  define R13  %r13
-#  define R14  %r14
-#  define R15  %r15
-#  define XMM0 %xmm0
-#  define XMM1 %xmm1
-#  define XMM2 %xmm2
-#  define XMM3 %xmm3
-#  define XMM4 %xmm4
-#  define XMM5 %xmm5
-#  define XMM6 %xmm6
-#  define XMM7 %xmm7
-#  define AL   %al
-#  define GLOBAL(X) .globl CSYM(X)
-#  define BEGIN_PROC(X)  CSYM(X):
-#  define END_PROC(X)
-#  define qword
-#  define ptr
-#endif
+#include "../portasm/portasm-x64.S"
 
 BEGIN_ASM
 
